[package]
name = "D32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.24"
moka = {version = "0.11"}
keyframe = {version = "1.1"}
keyframe_derive = {version = "1"}
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
ggez = { version = "0.9.3" }
itertools = "0.11"
