[package]
name = "D32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.24"
moka = { version = "0.11"}
keyframe = { version = "1.1"}
keyframe_derive = { version = "1"}
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
ggez = { version = "0.9.3" }
itertools = "0.11"
pathfinding = "4.3.2"
futures-util = {version = "0.3.29", features = ["io-compat", "sink"] }
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "io-std", "io-util", "net"] }
tokio-util = { version = "0.7.10", features = ["codec"]}
crossbeam = "0.8"
directories-next = "2"
anyhow = "1.0.22"
serde = "1.0.192"
